--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <li>USER GUIDE</li>
       </a>
       <a href="#">
-        <li>UPDATES</li>
+        <li>SOURCE CODE</li>
       </a>
     </ul>
   </div>
