--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
       <a href="Javascript: loadCanvas();">
         <li>LOAD SCRIPT</li>
       </a>
-      <a href="#">
+      <a href="#" target="_blank">
         <li>USER GUIDE</li>
       </a>
-      <a href="#">
-        <li>SOURCE CODE</li>
+      <a href="https://github.com/sparkfun/spectacleapp" target="_blank">
+        <li>GITHUB REPO</li>
       </a>
     </ul>
   </div>
