--- a/index.html
+++ b/index.html
@@ -118,9 +118,13 @@
   
   <div class="program-hardware">
 <br/><br/>
-    <div class="chunk" id="howtoprogram"></div>
-    <br/>
-    <br/>
+    <div class="chunk" id="program-chunk" style="height: 550px;">
+    <img src="https://npoole.github.io/SpectacleApp/img/slide1.png" style="">
+    <img src="https://npoole.github.io/SpectacleApp/img/slide2.png" style="display: none;">
+    <img src="https://npoole.github.io/SpectacleApp/img/slide3.png" style="display: none;">
+    <img src="https://npoole.github.io/SpectacleApp/img/slide4.png" style="display: none;">
+    <img src="https://npoole.github.io/SpectacleApp/img/slide5.png" style="display: none;">
+    </div>
      <input type="image" src="img/g11000.png" height="40px" class="program-button">
   </div>
 
