--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="twitter:site" content="@sparkfun" />
 <meta name="twitter:title" content="I Shared a Spectacle Project!" />
 <meta name="twitter:description" content="Look what I made with Spectacle, SparkFun's no-download, no-programming, no-soldering maker platform!" />
-<meta name="twitter:image" content="https://npoole.github.io/SpectacleApp/icons/twitter-icon-spectacle.png" />
+<meta name="twitter:image" content="https://sparkfun.github.io/spectacleapp/icons/twitter-icon-spectacle.png" />
 <!--End Twitter Card-->
 <!--Begin Open Graph Tags-->
 <meta property="og:type" content="article" />
@@ -16,7 +16,7 @@
 <meta property="og:image:width" content="220" />  
 <meta property="og:image:height" content="220" />  
 <meta property="og:image:type" content="image/png" />  
-<meta property="og:image" content="https://npoole.github.io/SpectacleApp/icons/og-icon-spectacle.png" />  
+<meta property="og:image" content="https://sparkfun.github.io/spectacleapp/icons/og-icon-spectacle.png" />  
 <!--End Open Graph Tags--> 
 <!--Begin Windows Tile Stuff-->
 <meta name="theme-color" content="#ffffff">
@@ -119,11 +119,11 @@
   <div class="program-hardware">
 <br/><br/>
     <div class="chunk" id="program-chunk" style="height: 550px;">
-    <img src="https://npoole.github.io/SpectacleApp/img/slide1.png" style="">
-    <img src="https://npoole.github.io/SpectacleApp/img/slide2.png" style="display: none;">
-    <img src="https://npoole.github.io/SpectacleApp/img/slide3.png" style="display: none;">
-    <img src="https://npoole.github.io/SpectacleApp/img/slide4.png" style="display: none;">
-    <img src="https://npoole.github.io/SpectacleApp/img/slide5.png" style="display: none;">
+    <img src="https://sparkfun.github.io/spectacleapp/img/slide1.png" style="">
+    <img src="https://sparkfun.github.io/spectacleapp/img/slide2.png" style="display: none;">
+    <img src="https://sparkfun.github.io/spectacleapp/img/slide3.png" style="display: none;">
+    <img src="https://sparkfun.github.io/spectacleapp/img/slide4.png" style="display: none;">
+    <img src="https://sparkfun.github.io/spectacleapp/img/slide5.png" style="display: none;">
     </div>
      <input type="image" src="img/g11000.png" height="40px" class="program-button">
   </div>
@@ -199,9 +199,9 @@
  </share-foot>
 
   <actions-foot>
-  <input type="image" src="https://npoole.github.io/SpectacleApp/img/goback.png" height="90%" class="act-list-exit">
-  <img src="https://npoole.github.io/SpectacleApp/img/g8569.png" height="90%">
-  <input type="image" src="https://npoole.github.io/SpectacleApp/img/addaction.png" height="90%" class="add-action">
+  <input type="image" src="https://sparkfun.github.io/spectacleapp/img/goback.png" height="90%" class="act-list-exit">
+  <img src="https://sparkfun.github.io/spectacleapp/img/g8569.png" height="90%">
+  <input type="image" src="https://sparkfun.github.io/spectacleapp/img/addaction.png" height="90%" class="add-action">
 </actions-foot>
   
   <blank-foot>
