--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
   <div class="program-hardware">
 <br/><br/>
     <div class="chunk" id="program-chunk" style="height: 550px;">
-    <img src="https://sparkfun.github.io/spectacleapp/img/slide1.png" style="">
-    <img src="https://sparkfun.github.io/spectacleapp/img/slide2.png" style="display: none;">
-    <img src="https://sparkfun.github.io/spectacleapp/img/slide3.png" style="display: none;">
-    <img src="https://sparkfun.github.io/spectacleapp/img/slide4.png" style="display: none;">
-    <img src="https://sparkfun.github.io/spectacleapp/img/slide5.png" style="display: none;">
+    <img src="https://sparkfun.github.io/spectacleapp/img/slide1.png" width="80%" style="">
+    <img src="https://sparkfun.github.io/spectacleapp/img/slide2.png" width="80%" style="display: none;">
+    <img src="https://sparkfun.github.io/spectacleapp/img/slide3.png" width="80%" style="display: none;">
+    <img src="https://sparkfun.github.io/spectacleapp/img/slide4.png" width="80%" style="display: none;">
+    <img src="https://sparkfun.github.io/spectacleapp/img/slide5.png" width="80%" style="display: none;">
     </div>
      <input type="image" src="img/g11000.png" height="40px" class="program-button">
   </div>
