--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
   <div class="program-hardware">
 <br/><br/>
     <div class="chunk" id="program-chunk" style="height: 400px;">
-    <img src="https://sparkfun.github.io/spectacleapp/img/slide1.png" width="300px" style="">
-    <img src="https://sparkfun.github.io/spectacleapp/img/slide2.png" width="300px" style="display: none;">
-    <img src="https://sparkfun.github.io/spectacleapp/img/slide3.png" width="300px" style="display: none;">
-    <img src="https://sparkfun.github.io/spectacleapp/img/slide4.png" width="300px" style="display: none;">
-    <img src="https://sparkfun.github.io/spectacleapp/img/slide5.png" width="300px" style="display: none;">
+    <img id="slide1" src="https://sparkfun.github.io/spectacleapp/img/slide1.png" width="300px">
+    <img id="slide2" src="https://sparkfun.github.io/spectacleapp/img/slide2.png" width="300px">
+    <img id="slide3" src="https://sparkfun.github.io/spectacleapp/img/slide3.png" width="300px">
+    <img id="slide4" src="https://sparkfun.github.io/spectacleapp/img/slide4.png" width="300px">
+    <img id="slide5" src="https://sparkfun.github.io/spectacleapp/img/slide5.png" width="300px">
     </div>
      <input type="image" src="img/g11000.png" height="40px" class="program-button">
   </div>
