--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <input type="image" src="img/ham_icon.png" height="40px" class="hamburger">
   <input type="image" src="img/ex_icon.png" height="40px" style="top: -8px;" class="cross">
   <div align="center" class="top-bar"><img class="logo" src="img/splogotype_50.png"></div>
+  <div align="right" class="top-bar"><a href="https://www.sparkfun.com" target="_blank"><img src="img/sfe_box.png"></a></div>  
 </header>
 
 <body>
