--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <header>
   <input type="image" src="img/ham_icon.png" height="40px" class="hamburger">
   <input type="image" src="img/ex_icon.png" height="40px" style="top: -8px;" class="cross">
-  <div align="center" class="top-bar"><img class="logo" src="img/splogotype_50.png"><img align="right" class="logo" src="img/sfe_box.png"></div> 
+  <div align="center" class="top-bar"><img class="logo" src="img/splogotype_50.png"><a href="https://www.sparkfun.com" target="_blank"><img align="right" class="logo" src="img/sfe_box.png"></a></div> 
 </header>
 
 <body>
