--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <a href="Javascript: loadCanvas();">
         <li>LOAD SCRIPT</li>
       </a>
-      <a href="#" target="_blank">
+      <a href="https://learn.sparkfun.com/tutorials/spectacle-users-guide" target="_blank">
         <li>USER GUIDE</li>
       </a>
       <a href="https://github.com/sparkfun/spectacleapp" target="_blank">
