--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <img id="slide5" src="https://sparkfun.github.io/spectacleapp/img/slide5.png" width="300px">
     </div>
     <br/>
-    <p style="color: white;"> WARNING: If you press the Install button without a device/n
+    <p style="color: white;"> WARNING: If you press the Install button without a device\n
       plugged in, it will make a loud and unpleasant sound.</p>
      <input type="image" src="img/g11000.png" height="40px" class="program-button">
   </div>
