--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@sparkfun" />
 <meta name="twitter:title" content="Check out my Spectacle Project!" />
-<meta name="twitter:description" content="Look what I made with Spectacle: SparkFun's no-download, no-programming, no-soldering maker platform!" />
+<meta name="twitter:description" content="Look what I made with #SparkFunSpectacle: SparkFun's no-download, no-programming, no-soldering maker platform!" />
 <meta name="twitter:image" content="https://sparkfun.github.io/spectacleapp/icons/twitter-icon-spectacle.png" />
 <!--End Twitter Card-->
 <!--Begin Open Graph Tags-->
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Check out my Spectacle Project!" />
-<meta property="og:description" content="Look what I made with Spectacle: SparkFun's no-download, no-programming, no-soldering maker platform!" />
+<meta property="og:description" content="Look what I made with #SparkFunSpectacle: SparkFun's no-download, no-programming, no-soldering maker platform!" />
 <meta property="og:image:width" content="220" />  
 <meta property="og:image:height" content="220" />  
 <meta property="og:image:type" content="image/png" />  
